# libcordic

example/: CMakeLists.txt  main.c
src/: libcordic.c  libcordic.h  libcordic_constants.h  libcordic_constants_gen.py
